--- a/helloworld.vcxproj.filters
+++ b/helloworld.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="Box.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Ref.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Box.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Ref.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
