--- a/helloworld.vcxproj.filters
+++ b/helloworld.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Ref.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="VecTES.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Box.cpp">
@@ -30,6 +33,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Ref.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="VecTES.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
