--- a/helloworld.vcxproj
+++ b/helloworld.vcxproj
@@ -63,12 +63,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Box.h" />
+    <ClInclude Include="MapTES.h" />
     <ClInclude Include="Ref.h" />
     <ClInclude Include="VecTES.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MapTES.cpp" />
     <ClCompile Include="Ref.cpp" />
     <ClCompile Include="VecTES.cpp" />
   </ItemGroup>
