--- a/helloworld.vcxproj.filters
+++ b/helloworld.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="MapTES.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TesFunctionInStruct.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Box.cpp">
@@ -42,6 +45,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MapTES.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TesPrivateOutClass.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
